[FIX] Fix overflow x on file upload container

--- a/src/modules/upload/components/UploadFile/styles.module.scss
+++ b/src/modules/upload/components/UploadFile/styles.module.scss
@@ -8,6 +8,7 @@
   z-index: 2;
   margin: 2rem auto;
   max-width: 25rem;
+  overflow: hidden;
 }
 
 .fileInfo {
